# devscribe

./: .gitignore  CMakeLists.txt  README.md
src/: App.cpp  App.hpp  Note.hpp  NoteManager.cpp  NoteManager.hpp  UIManager.cpp  UIManager.hpp  main.cpp
